--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 <h2 class="theory-title">
                     Readers–Writers Problem
                 </h2>
-                <p class="theory-subtitle">Last Updated: December 10, 2025</p>
+                
             </div>
 
             <div class="theory-content">
@@ -468,6 +468,13 @@
         </div>
 
     </div>
+
+    <footer class="footer">
+        <div class="footer-title">This is an Operating Systems Group Project</div>
+        <div class="footer-members">
+            <strong>Group Members:</strong> Souvik Bag, Swarnajit Chatterjee, Suprokas Midde, Suman Manna, Supravat Das
+        </div>
+    </footer>
 
     <script src="script.js"></script>
 </body>
